# hr-backend

./: .env.example  .gitignore  alembic.ini  gunicorn.conf.py  init_data.py  main.py  pyproject.toml  requirements.txt
agents/: candidate.py  llms.py  prompts.py  resume.py  resume_prompts.py
agents/candidate/: __init__.py  agent.py  graph.py  prompts.py  state.py
agents/hr_assistant/: agent.py  graph.py  prompts.py  state.py
agents/resume/: __init__.py  agent.py
alembic/: env.py
alembic/versions/: 0443e826c6e9_delete_token_from_ding_user.py  7e311707bf3b_interview_enum_add_padding.py  80d68ac7591f_add_candidate_search_profile_tables.py  8837d30ca3f1_init_model.py  a1c9d4e5f6a7_rename_ai_filter_status_labels.py  b2c3d4e5f6a8_add_candidate_agent_events.py  c3d4e5f6a7b8_add_assistant_conversation_tables.py  d4e5f6a7b8c9_add_iam_rbac_tables.py  e5f6a7b8c9d0_add_organization_lifecycle_fields.py  f6a7b8c9d0e1_add_persistent_invitations.py  g7b8c9d0e1f2_add_auth_sessions.py  (+11 more)
core/: auth.py  cache.py  dingtalk.py  mail.py  ocr.py  pdf.py  single.py
dependencies/: __init__.py  candidate_portal.py
docs/: HR招聘助手SSE流式输出改造计划.md  HR招聘智能对话助手需求与技术设计.md  人才库Milvus原生混合检索改造方案.md  人才库检索评测查询集.json  企业制度知识库RAG改造方案.md  用户角色权限管理重构方案.md  知识库多策略文本切分改造方案.md  知识库文本分段与清洗预览改造方案.md  组织架构与用户管理体验改造方案.md
iam/: __init__.py  permissions.py
knowledge/: __init__.py  recruiting_policy.py
models/: __init__.py  assistant_conversation.py  candidate.py  candidate_agent.py  candidate_communication.py  candidate_search.py  iam.py  interview.py  knowledge.py  positions.py  user.py
rag/: embeddings.py  knowledge_base_definitions.py  knowledge_search_evaluation.py  knowledge_sources.py  milvus_client.py  milvus_schema.py  retrieval_types.py  talent_search_evaluation.py
repository/: __init__.py  assistant_conversation_repo.py  auth_session_repo.py  candidate_agent_repo.py  candidate_repo.py  candidate_search_repo.py  iam_repo.py  interview_repo.py  oauth_state_repo.py  position_repo.py  user_repo.py
routers/: assistant_router.py  candidate_communication_router.py  candidate_portal_router.py  candidate_router.py  dashboard_router.py  dev_router.py  hr_assistant_router.py  iam_router.py  knowledge_router.py  media_router.py  position_router.py  talent_search_router.py  user_router.py
scheduler/: __init__.py  candidate_communication.py
schemas/: __init__.py  agent_schema.py  assistant_conversation_schema.py  cache_schema.py  candidate_communication_schema.py  candidate_schema.py  hr_assistant_schema.py  iam_schema.py  knowledge_schema.py  knowledge_search_schema.py  position_schema.py  talent_search_schema.py  user_schema.py
scripts/: evaluate_recruiting_policy_chunking_strategies.py  evaluate_recruiting_policy_knowledge.py  evaluate_talent_search.py  generate_synthetic_test_resumes.py  init_milvus.py  init_recruiting_policy_knowledge_base.py  manual_email_bot.py  rebuild_candidate_milvus_index.py  sync_candidate_index.py
services/: candidate_agent_event_service.py  candidate_communication_service.py  candidate_index_backfill_service.py  candidate_index_sync_service.py  candidate_indexing_service.py  candidate_portal_auth_service.py  candidate_scoring_service.py  candidate_search_profile_service.py  candidate_service.py  candidate_workflow_service.py  hr_assistant_conversation_service.py  interview_scheduling_service.py  interview_service.py  knowledge_base_registry_service.py  knowledge_document_service.py  knowledge_index_service.py  knowledge_preview_service.py  knowledge_retrieval_config_service.py  knowledge_search_service.py  knowledge_text_extractor.py  knowledge_text_processing.py  resume_service.py  talent_search_service.py
settings/: __init__.py
tasks/: __init__.py  candidate_communication_tasks.py  candidate_index_tasks.py  candidate_portal_email_tasks.py  candidate_tasks.py  email_tasks.py  knowledge_tasks.py  resume_tasks.py
templates/: ding_authorize_success.html
tests/: conftest.py  test_assistant_sse_router.py  test_audit_log_repo.py  test_auth_session_service.py  test_candidate_agent_event_service.py  test_candidate_agent_state.py  test_candidate_authorization.py  test_candidate_context.py  test_candidate_graph.py  test_candidate_graph_flow.py  test_candidate_graph_logging.py  test_candidate_index_backfill_service.py  test_candidate_indexing_service.py  test_candidate_scoring_service.py  test_candidate_search_profile_service.py  test_candidate_service.py  test_candidate_tasks.py  test_candidate_workflow_service.py  test_email_scheduler.py  test_evaluate_talent_search.py  test_hr_assistant_conversation_service.py  test_hr_assistant_prompt.py  test_hr_assistant_tools.py  test_iam_rbac.py  test_init_milvus.py  test_interview_scheduling_service.py  test_interview_service.py  test_invitation_service.py  test_knowledge_base_registry_service.py  test_knowledge_document_service.py  test_knowledge_index_service.py  test_knowledge_models.py  test_knowledge_preview_service.py  test_knowledge_retrieval_config_service.py  test_knowledge_search_evaluation.py  test_knowledge_search_service.py  test_knowledge_text_extractor.py  test_milvus_hybrid_retriever.py  test_milvus_schema.py  test_oauth_state_service.py  (+13 more)
upload/: 8864df70-1f2a-4294-95cb-e650bfcb43fe.docx
utils/: available_time.py  iso8601.py
(+55 files in other folders)
